# recomendador_sentimientos_amazon

./: .gitignore  Dockerfile  README.md  get_user_id.py  pyproject.toml  requirements-docker.txt  requirements.txt  settings.yaml  test_cuda.py  test_settings.py
.github/workflows/: ci.yml
scripts/: desactivar.ps1  reactivar.ps1
src/api/: main.py
src/data/: inspect_categories.py  prepare_amazon.py  prepare_local_amazon.py
src/eval/: evaluate_baseline_hybrid.py  evaluate_itemcf.py  evaluate_itemcf_hybrid.py
src/utils/: config.py  logging_setup.py
tests/: conftest.py  test_api_smoke.py  test_baseline.py  test_config.py  test_data_loader.py  test_hybrids.py  test_itemcf.py
