# pyproject.toml

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "recomendador_sentimientos_amazon"
version = "0.1.0"
description = "Recomendador híbrido con popularidad, CF y análisis de sentimiento en reseñas de Amazon Electronics."
authors = [
  { name="Alfredo Aponte", email="tu_email@ejemplo.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.black]
line-length = 100
target-version = ["py311"]
exclude = '''
/(
    env
  | \.git
  | \.venv
  | build
  | dist
  | data
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["env", ".venv", "data", "build", "dist"]
# Conjunto de reglas útil sin ser molesto
lint.select = ["E", "F", "I", "UP", "B", "SIM"]
lint.ignore = ["E203", "E266", "E501"]  # coherente con black
